src/objects/Client_Employment__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Employment</relationshipLabel>
        <relationshipName>Client_Employment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>All other labourers and related workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assemblers/Lineworkers (Metal Goods)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chefs/Cooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaners Domestics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver&apos;s Mates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers of road goods vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fork Lift and mechanical truck drivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardeners &amp; Groundsmen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticultural trades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Porters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Porters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kitchen Porters, Hands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launderers, Dry Cleaners, Pressers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mates to building trades workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messengers, Couriers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assemblers/Lineworkers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packers, Bottlers, Canners, Fillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road construction and maintenace workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Gaurds &amp; Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storekeepers &amp; Warehousemen/women</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typists &amp; Word porcessor operators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyre &amp; Exhaust Fitters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Cleaners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Clerical &amp; Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction &amp; Allied Trades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticulture &amp; Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel &amp; Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports &amp; Racing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Employment</label>
    <nameField>
        <displayFormat>CEM-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Employment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>